--- a/My Money Tracker.html
+++ b/My Money Tracker.html
@@ -29,7 +29,7 @@
             </thead>
             <tr class="first-row">
                 <td colspan="6">
-                    <div class="first-row-content">Starting Balance: <img
+                    <div class="first-row-content">Start Here! <img
                             src="https://img.icons8.com/?size=100&id=kmdFzwR3bBa9&format=png&color=000000"
                             alt="arrow pointing right" class="right-arrow" /></div>
                 </td>
