Update table headers for clarity and adjust header image styling

--- a/My Money Tracker.html
+++ b/My Money Tracker.html
@@ -20,10 +20,10 @@
                 <tr>
                     <th>Date</th>
                     <th>Description</th>
-                    <th>Income</th>
-                    <th>Share</th>
+                    <th>Amount</th>
                     <th>Save</th>
                     <th>Spend</th>
+                    <th>Share</th>
                     <th>Balance</th>
                 </tr>
             </thead>
